integration/snapshots/query-coverage-unclassified-language_stderr.snap
---
source: xtask/src/tests.rs
expression: stderr
---
$ duvet query -c coverage -r cov.xml -f jacoco-xml
EXIT: Some(1)
    Starting duvet in query mode...
  Extracting requirements
    Scanning sources
     Scanned 2 sources 
     Parsing annotations
      Parsed 2 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 2 references 
  × no language classifier for src/Other.rs; the coverage model only supports
  │ sources it can classify (currently .java). Remove this file from the
  │ coverage report or add a classifier for its language.
