integration/snapshots/query-duplicate-targets-mixed-form-allowed_stdout.snap
---
source: xtask/src/tests.rs
expression: stdout
---
$ duvet query --check duplicate-targets
    Starting duvet in query mode...
  Extracting requirements
    Scanning sources
     Scanned 1 sources 
     Parsing annotations
      Parsed 2 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 2 sections 
    Matching references
     Matched 2 references 
  
Duplicate targets: ✓ PASS

Targets bearing more than one annotation (count descending):
  src/lib.rs:7 count=2 sections=2 forms=test:1,implementation:1


Overall: ✓ PASS
