integration/snapshots/query-duplicate-targets-mixed-form_stderr.snap
---
source: xtask/src/tests.rs
expression: stderr
---
$ duvet query --check duplicates
EXIT: Some(1)
    Starting duvet in query mode...
  Extracting requirements
    Scanning sources
     Scanned 1 sources 
     Parsing annotations
      Parsed 2 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 2 sections 
    Matching references
     Matched 2 references 

Duplicates: ✗ FAIL

Targets bearing more than one annotation (count descending):
  src/lib.rs:7 count=2 sections=2 forms=test:1,implementation:1

  × Target src/lib.rs:7 mixes claim forms test+implementation — the
  │ combination is inside no allowed set

Advice: 
  ☞ Related context for:
  │  Target src/lib.rs:7 mixes claim forms test+implementation — the
  │ combination is inside no allowed set
   ╭─[src/lib.rs:1:5]
 1 │ ╭─▶ //= spec.md#section-1
 2 │ │   //= type=test
 3 │ ├─▶ //# aaa
   · ╰──── Mixed forms
 4 │     
   ╰────

Advice: 
  ☞ Related context for:
  │  Target src/lib.rs:7 mixes claim forms test+implementation — the
  │ combination is inside no allowed set
   ╭─[src/lib.rs:5:5]
 4 │     
 5 │ ╭─▶ //= spec.md#section-2
 6 │ ├─▶ //# bbb
   · ╰──── Mixed forms
 7 │     pub fn both_roles() {}
   ╰────


Overall: ✗ FAIL
